# optotune-lens

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
examples/: icc1c_example.py
src/optotune_lens/: __init__.py  exceptions.py  icc.py  icc1c.py  lens.py  utils.py
tasks/: plan.md  todo.md
tests/: __init__.py  test_icc.py  test_icc1c.py  test_lens.py
wheels/: optoicc-2.0.5256-py3-none-any.whl  optokummenberg-1.0.5256-py3-none-any.whl
