[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optotune-lens"
version = "0.1.0"
description = "A robust, modern Python SDK for Optotune electrically tunable lenses"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Elhanan Buchsbaum", email = "ebuchsbaum@protonmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "pyserial>=3.5",
    "optoicc",
    "optokummenberg",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["optotune_lens*"]

[tool.uv.sources]
optoicc = { path = "wheels/optoicc-2.0.5256-py3-none-any.whl" }
optokummenberg = { path = "wheels/optokummenberg-1.0.5256-py3-none-any.whl" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
